--- a/Ch02/KNN.ipynb
+++ b/Ch02/KNN.ipynb
@@ -677,13 +677,7 @@
       "the classifier came back with: 1, the real answer is: 1\n",
       "the classifier came back with: 1, the real answer is: 1\n",
       "the classifier came back with: 1, the real answer is: 1\n",
-      "the classifier came back with: 1, the real answer is: 1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "the classifier came back with: 1, the real answer is: 1\n",
       "the classifier came back with: 1, the real answer is: 1\n",
       "the classifier came back with: 1, the real answer is: 1\n",
       "the classifier came back with: 1, the real answer is: 1\n",
@@ -1549,7 +1543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.5.6"
   }
  },
  "nbformat": 4,
