决策树添加注释

--- a/Ch03/trees.ipynb
+++ b/Ch03/trees.ipynb
@@ -125,7 +125,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 选择最好的划分方式"
+    "# 选择最好的划分方式\n",
+    "\n",
+    "算法原理：首先是计算有多少个特征，然后用该特征下属性分割数据集，计算每个子集的信息熵，然后通过:\n",
+    "$$Gain(D,a) = Ent(D) - \\sum^{v}_{v=1}\\frac{\\left | D^{v} \\right |}{\\left | D \\right |}Ent(D^{v})$$\n",
+    "计算分割后的信息熵，依次求得最小的信息熵记为最优特征。"
    ]
   },
   {
@@ -192,6 +196,14 @@
     "        classCount[vote] += 1\n",
     "    sortedClassCount = sorted(classCount.items(), key=operator.itemgetter(1), reverse=True)\n",
     "    return sortedClassCount[0][0]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 算法原理\n",
+    "求得最优特征之后，通过特征的属性划分后的子集中标签出现最多的情况即为该属性对应的结果。"
    ]
   },
   {
