感觉过拟合的训练模型

--- a/Ch04/bayes.ipynb
+++ b/Ch04/bayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,13 +26,13 @@
     "    classVec = [0,1,0,1,0,1]    #1 is abusive, 0 not\n",
     "    return postingList,classVec\n",
     "                 \n",
-    "def createVocabList(dataSet):  # 获取所有文档不相同的次数\n",
+    "def createVocabList(dataSet):  # 获取所有文档单词的并集\n",
     "    vocabSet = set()  #create empty set\n",
     "    for document in dataSet:\n",
     "        vocabSet = vocabSet | set(document) #union of the two sets\n",
     "    return list(vocabSet)\n",
     "\n",
-    "def setOfWords2Vec(vocabList, inputSet):  # 统计文档中各词出现情况\n",
+    "def setOfWords2Vec(vocabList, inputSet):  # 标准化函数，构建输入矩阵 用于统计文档中各词出现情况\n",
     "    returnVec = [0]*len(vocabList)\n",
     "    for word in inputSet:\n",
     "        if word in vocabList:\n",
@@ -43,14 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['problems', 'love', 'flea', 'posting', 'stop', 'how', 'steak', 'not', 'worthless', 'take', 'ate', 'buying', 'mr', 'my', 'garbage', 'is', 'licks', 'please', 'park', 'has', 'cute', 'dog', 'maybe', 'quit', 'him', 'I', 'food', 'dalmation', 'so', 'stupid', 'to', 'help']\n"
+      "['garbage', 'love', 'flea', 'licks', 'ate', 'maybe', 'is', 'him', 'my', 'to', 'worthless', 'steak', 'park', 'stop', 'problems', 'cute', 'dalmation', 'mr', 'posting', 'stupid', 'I', 'has', 'quit', 'take', 'not', 'how', 'please', 'dog', 'help', 'food', 'so', 'buying']\n"
      ]
     }
    ],
@@ -62,13 +62,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1,\n",
+       "[0,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
        " 0,\n",
        " 1,\n",
        " 0,\n",
@@ -77,32 +89,20 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 1,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 1,\n",
-       " 0,\n",
-       " 1,\n",
-       " 0,\n",
        " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 1]"
+       " 0]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,38 +138,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 1, 1, 0]\n",
-      "[0, 0, 0, 1, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0]\n",
-      "[0.04166667 0.04166667 0.04166667 0.         0.04166667 0.04166667\n",
-      " 0.04166667 0.         0.         0.         0.04166667 0.\n",
-      " 0.04166667 0.125      0.         0.04166667 0.04166667 0.04166667\n",
-      " 0.         0.04166667 0.04166667 0.04166667 0.         0.\n",
-      " 0.08333333 0.04166667 0.         0.04166667 0.04166667 0.\n",
-      " 0.04166667 0.04166667] [0.         0.         0.         0.05263158 0.05263158 0.\n",
-      " 0.         0.05263158 0.10526316 0.05263158 0.         0.05263158\n",
-      " 0.         0.         0.05263158 0.         0.         0.\n",
-      " 0.05263158 0.         0.         0.10526316 0.05263158 0.05263158\n",
-      " 0.05263158 0.         0.05263158 0.         0.         0.15789474\n",
-      " 0.05263158 0.        ] 0.5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "listOPosts, listClasses = loadDataSet()\n",
     "myVocabList = createVocabList(listOPosts)\n",
     "trainMat = list()\n",
     "for postinDoc in listOPosts:\n",
     "    trainMat.append(setOfWords2Vec(myVocabList, postinDoc))\n",
-    "p0v, p1v,pAb = trainNBO(trainMat, listClasses)\n",
-    "print(p0v, p1v, pAb)"
+    "p0v, p1v,pAb = trainNBO(trainMat, listClasses)"
    ]
   },
   {
@@ -198,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,54 +202,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 1 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0]\n",
-      "[0.04761905 0.04761905 0.04761905 0.0952381  0.0952381  0.04761905\n",
-      " 0.04761905 0.0952381  0.14285714 0.0952381  0.04761905 0.0952381\n",
-      " 0.04761905 0.04761905 0.0952381  0.04761905 0.04761905 0.04761905\n",
-      " 0.0952381  0.04761905 0.04761905 0.14285714 0.0952381  0.0952381\n",
-      " 0.0952381  0.04761905 0.0952381  0.04761905 0.04761905 0.19047619\n",
-      " 0.0952381  0.04761905]\n",
-      "[0.         0.04761905 0.         0.         0.         0.\n",
-      " 0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.04761905 0.         0.         0.         0.\n",
-      " 0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.         0.         0.04761905 0.         0.\n",
-      " 0.         0.        ]\n",
       "['love', 'my', 'dalmation'] classified as:  0\n",
-      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0]\n",
-      "[0.04761905 0.04761905 0.04761905 0.0952381  0.0952381  0.04761905\n",
-      " 0.04761905 0.0952381  0.14285714 0.0952381  0.04761905 0.0952381\n",
-      " 0.04761905 0.04761905 0.0952381  0.04761905 0.04761905 0.04761905\n",
-      " 0.0952381  0.04761905 0.04761905 0.14285714 0.0952381  0.0952381\n",
-      " 0.0952381  0.04761905 0.0952381  0.04761905 0.04761905 0.19047619\n",
-      " 0.0952381  0.04761905]\n",
-      "[0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.         0.0952381  0.         0.         0.\n",
-      " 0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.         0.         0.         0.         0.19047619\n",
-      " 0.         0.        ]\n",
       "['stupid', 'garbage'] classified as:  1\n"
      ]
     }
    ],
    "source": [
     "\"\"\"\n",
-    "由于我们已经知道了垃圾邮箱和非垃圾邮箱下所有属性取值的概率，当给定我们一个样本时由于原始矩阵中不存在的属性值为0\n",
-    "所以与条件概率矩阵相乘后就求得\n",
+    "由于我们已经知道了垃圾邮箱和非垃圾邮箱下所有属性取值的概率，我们根据输入矩阵各项的属性值找到条件概率中符合条件的概率然后连乘\n",
+    "但是此处比较特殊，由于我们只考虑词存在的概率（词集模型），当该词不存在的概率我们不需要考虑，所以直接拿输入矩阵与条件概率矩阵相乘\n",
+    "又因为对连乘取对数之后结果就变成了各项相加\n",
     "\n",
     "\"\"\"\n",
     "def classifyNB(vec2Classify, p0Vec, p1Vec, pClass1):\n",
-    "    print(vec2Classify)\n",
-    "    print(p1Vec)\n",
-    "    print(vec2Classify * p1Vec)\n",
+    "    \"\"\"\n",
+    "    输入矩阵与条件概率矩阵相乘后相加\n",
+    "    \"\"\"\n",
     "    p1 = sum(vec2Classify * p1Vec) + log(pClass1)    #element-wise mult\n",
     "    p0 = sum(vec2Classify * p0Vec) + log(1.0 - pClass1)\n",
     "    if p1 > p0:\n",
@@ -281,14 +234,14 @@
     "\n",
     "def testingNB():\n",
     "    listOPosts,listClasses = loadDataSet()\n",
-    "    myVocabList = createVocabList(listOPosts)\n",
+    "    myVocabList = createVocabList(listOPosts)  # 构造单词训练集合\n",
     "    trainMat=[]\n",
     "    for postinDoc in listOPosts:\n",
-    "        trainMat.append(setOfWords2Vec(myVocabList, postinDoc))\n",
-    "    p0V,p1V,pAb = trainNBO(np.array(trainMat),np.array(listClasses))\n",
+    "        trainMat.append(setOfWords2Vec(myVocabList, postinDoc))  # 构建训练矩阵（每一行是一个文档样本）\n",
+    "    p0V,p1V,pAb = trainNBO(np.array(trainMat),np.array(listClasses))  # 计算条件概率矩阵和先验概率\n",
     "    testEntry = ['love', 'my', 'dalmation']\n",
-    "    thisDoc = np.array(setOfWords2Vec(myVocabList, testEntry))\n",
-    "    print (testEntry,'classified as: ',classifyNB(thisDoc,p0V,p1V,pAb))\n",
+    "    thisDoc = np.array(setOfWords2Vec(myVocabList, testEntry))  # 构建输入矩阵\n",
+    "    print (testEntry,'classified as: ',classifyNB(thisDoc,p0V,p1V,pAb))  # 根据贝叶斯公式计算结果\n",
     "    testEntry = ['stupid', 'garbage']\n",
     "    thisDoc = np.array(setOfWords2Vec(myVocabList, testEntry))\n",
     "    print (testEntry,'classified as: ',classifyNB(thisDoc,p0V,p1V,pAb))\n",
@@ -296,11 +249,86 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 文档词袋模型\n",
+    "目前为止，我们将每个词的出现与否作为一个特征，称为词集模型。\n",
+    "如果一个词在文档中出现不止一次，这可能意味着包含该词是否出现在文档中所不能表现的某种信息,这种模型称为词袋模型。\n",
+    "在词袋中，每个单词可以出现多次，而在词集中每个词只能出现一次。\n",
+    "下面对我们的标准化函数进行修改："
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def bagOfWordsVecMN(vocabList, inputSet):\n",
+    "    returnVec = [0] * len(vocabList)\n",
+    "    for word in vocabList:\n",
+    "        if word in vocabList:\n",
+    "            returnVec[vocabList.index(word)] += 1\n",
+    "    return returnVec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hello', 'Since', 'you', 'are', 'an', 'owner', 'of', 'at', 'least', 'one', 'Google', 'Groups', 'group', 'that', 'uses', 'the', 'customized', 'welcome', 'message', 'pages', 'or', 'files', 'we', 'are', 'writing', 'to', 'inform', 'you', 'that', 'we', 'will', 'no', 'longer', 'be', 'supporting', 'these', 'features', 'starting', 'February', '2011', 'We', 'made', 'this', 'decision', 'so', 'that', 'we', 'can', 'focus', 'on', 'improving', 'the', 'core', 'functionalities', 'of', 'Google', 'Groups', 'mailing', 'lists', 'and', 'forum', 'discussions', 'Instead', 'of', 'these', 'features', 'we', 'encourage', 'you', 'to', 'use', 'products', 'that', 'are', 'designed', 'specifically', 'for', 'file', 'storage', 'and', 'page', 'creation', 'such', 'as', 'Google', 'Docs', 'and', 'Google', 'Sites', 'For', 'example', 'you', 'can', 'easily', 'create', 'your', 'pages', 'on', 'Google', 'Sites', 'and', 'share', 'the', 'site', 'http', 'www', 'google', 'com', 'support', 'sites', 'bin', 'answer', 'py', 'hl', 'en', 'answer', '174623', 'with', 'the', 'members', 'of', 'your', 'group', 'You', 'can', 'also', 'store', 'your', 'files', 'on', 'the', 'site', 'by', 'attaching', 'files', 'to', 'pages', 'http', 'www', 'google', 'com', 'support', 'sites', 'bin', 'answer', 'py', 'hl', 'en', 'answer', '90563', 'on', 'the', 'site', 'If', 'you', 're', 'just', 'looking', 'for', 'a', 'place', 'to', 'upload', 'your', 'files', 'so', 'that', 'your', 'group', 'members', 'can', 'download', 'them', 'we', 'suggest', 'you', 'try', 'Google', 'Docs', 'You', 'can', 'upload', 'files', 'http', 'docs', 'google', 'com', 'support', 'bin', 'answer', 'py', 'hl', 'en', 'answer', '50092', 'and', 'share', 'access', 'with', 'either', 'a', 'group', 'http', 'docs', 'google', 'com', 'support', 'bin', 'answer', 'py', 'hl', 'en', 'answer', '66343', 'or', 'an', 'individual', 'http', 'docs', 'google', 'com', 'support', 'bin', 'answer', 'py', 'hl', 'en', 'answer', '86152', 'assigning', 'either', 'edit', 'or', 'download', 'only', 'access', 'to', 'the', 'files', 'you', 'have', 'received', 'this', 'mandatory', 'email', 'service', 'announcement', 'to', 'update', 'you', 'about', 'important', 'changes', 'to', 'Google', 'Groups', '']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/miku/anaconda2/envs/sun/lib/python3.5/site-packages/ipykernel_launcher.py:10: FutureWarning: split() requires a non-empty pattern match.\n",
+      "  # Remove the CWD from sys.path while we load stuff.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 测试邮件分类\n",
+    "emailText = open(\"email/ham/6.txt\", \"r\",encoding=\"ISO-8859-1\").read()  # 此处文件编码为ISO\n",
+    "\n",
+    "# 接下来利用正则表达式对文本进行切分和正则化（最小化经验误差函数上加约束）\n",
+    "\n",
+    "import re\n",
+    "\n",
+    "regEx = re.compile(\"\\\\W*\")  # 切分文本\n",
+    "\n",
+    "listOfTokens = regEx.split(emailText)  \n",
+    "\n",
+    "print(listOfTokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 使用朴素贝叶斯进行交叉验证\n",
+    "\n",
+    "def textParse(bigString):\n",
+    "    import re\n",
+    "    listOfTokens = re.split(r\"\\W*\", bigString)  # 切分文本\n",
+    "    return [tok.lower() for tok in listOfTokens if len(tok > 2)]  # 若不是单字母单词(如 I) ，则去掉大写\n",
+    "\n",
+    "def spamTest():\n",
+    "    docList = []\n",
+    "    classList = []\n",
+    "    fullText = []\n",
+    "    for i in range(1, 26):\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
