--- a/machine_learning_practice/Ch03/trees.ipynb
+++ b/machine_learning_practice/Ch03/trees.ipynb
@@ -154,7 +154,7 @@
     "            prob = len(subDataSet) / float(len(dataSet))\n",
     "            newEntropy += prob * calcShannonEnt(subDataSet)\n",
     "        infoGain = baseEntropy - newEntropy\n",
-    "        if(infoGain > bestInfoGain):\n",
+    "        if infoGain > bestInfoGain:\n",
     "            bestInfoGain = infoGain\n",
     "            bestFeature = i\n",
     "    return bestFeature"
@@ -217,8 +217,10 @@
     "# 创建树\n",
     "def createTree(dataSet, labels):\n",
     "    classList = [example[-1] for example in dataSet]\n",
+    "    # 如果样本的所有类别相同，这返回这个类别\n",
     "    if classList.count(classList[0]) == len(classList):\n",
     "        return classList[0]\n",
+    "    # 如果只剩下最后一列特征，则把出现最多的类别作为这个属性的类别\n",
     "    if len(dataSet[0]) == 1:\n",
     "        return majorityCnt(classList)\n",
     "    bestFeat = chooseBestFeatureToSplit(dataSet)\n",
